# hexlet-tests

./: Makefile  pyproject.toml
some_program/: capitalize.py
some_program/scripts/: main_script.py
tests/: test_capitalize.py
